--- a/New_method_Frame_to_Frame_V1.ipynb
+++ b/New_method_Frame_to_Frame_V1.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "DkZmvyB1aPKh"
       },
@@ -24,13 +24,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "c8bMzp37aUc0",
-        "outputId": "85d16988-8d26-4624-a4ac-bc862acbefcc"
+        "outputId": "0f9cc18c-6f26-43bb-be61-7a6fdded6c52"
       },
       "outputs": [
         {
@@ -39,7 +39,7 @@
           "text": [
             "Requirement already satisfied: gspread in /usr/local/lib/python3.10/dist-packages (6.0.2)\n",
             "Collecting gspread\n",
-            "  Downloading gspread-6.1.2-py3-none-any.whl.metadata (11 kB)\n",
+            "  Using cached gspread-6.1.2-py3-none-any.whl.metadata (11 kB)\n",
             "Requirement already satisfied: google-auth>=1.12.0 in /usr/local/lib/python3.10/dist-packages (from gspread) (2.27.0)\n",
             "Requirement already satisfied: google-auth-oauthlib>=0.4.1 in /usr/local/lib/python3.10/dist-packages (from gspread) (1.2.1)\n",
             "Requirement already satisfied: cachetools<6.0,>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from google-auth>=1.12.0->gspread) (5.5.0)\n",
@@ -53,9 +53,8 @@
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.0.0->requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.4.1->gspread) (3.8)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.0.0->requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.4.1->gspread) (2.0.7)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.0.0->requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.4.1->gspread) (2024.8.30)\n",
-            "Downloading gspread-6.1.2-py3-none-any.whl (57 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.5/57.5 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: gspread\n",
+            "Using cached gspread-6.1.2-py3-none-any.whl (57 kB)\n",
+            "Installing collected packages: gspread\n",
             "  Attempting uninstall: gspread\n",
             "    Found existing installation: gspread 6.0.2\n",
             "    Uninstalling gspread-6.0.2:\n",
@@ -70,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {
         "id": "_rr1HWwsaVdy"
       },
@@ -81,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "id": "iVUCQ0rDaWTr"
       },
@@ -92,13 +91,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pdSB_RhzaXRL",
-        "outputId": "1c3ccd6c-b711-472b-d8a3-8409ad00a7c4"
+        "outputId": "2041e3bf-c388-4171-803a-81f0a7478639"
       },
       "outputs": [
         {
@@ -115,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "id": "jMgoUgPGabXa"
       },
@@ -129,13 +128,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "giOj-SLuaedp",
-        "outputId": "4090cbc1-d82f-4672-cd9d-6ecc558906ec"
+        "outputId": "e200c696-e445-4663-a625-ae732ac87ff5"
       },
       "outputs": [
         {
@@ -146,7 +145,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 11
         }
       ],
       "source": [
@@ -158,13 +157,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZLJeu-rDahXS",
-        "outputId": "091f5ab9-2962-4851-ddf8-4d624d830be2"
+        "outputId": "2de05d9c-21d2-473e-bb57-cba153eea074"
       },
       "outputs": [
         {
@@ -474,7 +473,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 12
         }
       ],
       "source": [
@@ -484,14 +483,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
         "id": "4pUlMtCwajQU",
-        "outputId": "08b35f52-926a-44dd-f71d-f8a12e17a14d"
+        "outputId": "e294090f-8588-44a4-f304-9883f799f0d8"
       },
       "outputs": [
         {
@@ -514,7 +513,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1f17d5fb-ab9b-41f4-a6c0-ac73a1990965\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-551c0c0e-7659-4654-beda-d50b130eb2c4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -593,7 +592,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1f17d5fb-ab9b-41f4-a6c0-ac73a1990965')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-551c0c0e-7659-4654-beda-d50b130eb2c4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -645,12 +644,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1f17d5fb-ab9b-41f4-a6c0-ac73a1990965 button.colab-df-convert');\n",
+              "        document.querySelector('#df-551c0c0e-7659-4654-beda-d50b130eb2c4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1f17d5fb-ab9b-41f4-a6c0-ac73a1990965');\n",
+              "        const element = document.querySelector('#df-551c0c0e-7659-4654-beda-d50b130eb2c4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -670,8 +669,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ee7789d6-fa6e-4b3f-ac45-1a821a2dfbb2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ee7789d6-fa6e-4b3f-ac45-1a821a2dfbb2')\"\n",
+              "<div id=\"df-3985e6f3-9987-4b48-bb39-6137c0c486df\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3985e6f3-9987-4b48-bb39-6137c0c486df')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -790,7 +789,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ee7789d6-fa6e-4b3f-ac45-1a821a2dfbb2 button');\n",
+              "        document.querySelector('#df-3985e6f3-9987-4b48-bb39-6137c0c486df button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -807,7 +806,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 13
         }
       ],
       "source": [
@@ -823,7 +822,7 @@
       "metadata": {
         "id": "QQiES8K6sS7q"
       },
-      "execution_count": 25,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -834,7 +833,7 @@
       "metadata": {
         "id": "Dr94UBYjsUeq"
       },
-      "execution_count": 26,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -845,7 +844,7 @@
       "metadata": {
         "id": "Fos6uetWsVSr"
       },
-      "execution_count": 27,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -875,7 +874,7 @@
       "metadata": {
         "id": "7M07F8y0sXC6"
       },
-      "execution_count": 28,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -884,13 +883,13 @@
         "dfs"
       ],
       "metadata": {
-        "id": "4U6HmOYssYXD",
-        "outputId": "d55e2048-0bcd-4477-f4a5-ff2381527d19",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4U6HmOYssYXD",
+        "outputId": "dc20fe4a-1f43-49d7-d81d-34225942fbba"
       },
-      "execution_count": 29,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2899,7 +2898,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 18
         }
       ]
     },
@@ -2912,7 +2911,7 @@
       "metadata": {
         "id": "RpVsjjOSsa4T"
       },
-      "execution_count": 30,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -2921,14 +2920,14 @@
         "df1.head()"
       ],
       "metadata": {
-        "id": "8YRTCeDStzaB",
-        "outputId": "f059865d-3229-41fb-e11b-2a481806d938",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        }
+        },
+        "id": "8YRTCeDStzaB",
+        "outputId": "4cc62bc6-ea4e-4a74-d94a-0ef9fa9eefc1"
       },
-      "execution_count": 31,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2959,7 +2958,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-434111a6-807f-432e-9cf5-5594a0448e12\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-dbdf507e-928e-4509-acbd-58d7457f25d9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -3129,7 +3128,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-434111a6-807f-432e-9cf5-5594a0448e12')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dbdf507e-928e-4509-acbd-58d7457f25d9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3181,12 +3180,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-434111a6-807f-432e-9cf5-5594a0448e12 button.colab-df-convert');\n",
+              "        document.querySelector('#df-dbdf507e-928e-4509-acbd-58d7457f25d9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-434111a6-807f-432e-9cf5-5594a0448e12');\n",
+              "        const element = document.querySelector('#df-dbdf507e-928e-4509-acbd-58d7457f25d9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -3206,8 +3205,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-aeb4ffe4-d346-4637-8ebe-42584b48315e\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-aeb4ffe4-d346-4637-8ebe-42584b48315e')\"\n",
+              "<div id=\"df-e9d75662-ecea-406d-af19-994131b088d6\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e9d75662-ecea-406d-af19-994131b088d6')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3326,7 +3325,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-aeb4ffe4-d346-4637-8ebe-42584b48315e button');\n",
+              "        document.querySelector('#df-e9d75662-ecea-406d-af19-994131b088d6 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -3342,7 +3341,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 20
         }
       ]
     },
@@ -3367,7 +3366,7 @@
       "metadata": {
         "id": "z_7cWM_5uJbh"
       },
-      "execution_count": 19,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -3384,7 +3383,7 @@
       "metadata": {
         "id": "IOSOVXH5t0hb"
       },
-      "execution_count": 20,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -3393,14 +3392,14 @@
         "dfss[0]"
       ],
       "metadata": {
-        "id": "0w9NAIcJvCrj",
-        "outputId": "83209787-f943-4ea9-d29e-49ca9228c8ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
-        }
+        },
+        "id": "0w9NAIcJvCrj",
+        "outputId": "cf6901fa-0ff0-4999-e15d-e0e7e848311f"
       },
-      "execution_count": 43,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3419,7 +3418,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-964d101e-d899-4c16-9819-0e49b028dec2\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-08ed5476-d3bd-4607-aab5-d1861e5639d4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -3493,7 +3492,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-964d101e-d899-4c16-9819-0e49b028dec2')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-08ed5476-d3bd-4607-aab5-d1861e5639d4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3545,12 +3544,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-964d101e-d899-4c16-9819-0e49b028dec2 button.colab-df-convert');\n",
+              "        document.querySelector('#df-08ed5476-d3bd-4607-aab5-d1861e5639d4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-964d101e-d899-4c16-9819-0e49b028dec2');\n",
+              "        const element = document.querySelector('#df-08ed5476-d3bd-4607-aab5-d1861e5639d4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -3578,7 +3577,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 23
         }
       ]
     },
@@ -3586,7 +3585,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "gQ7KZbJnxEo5"
+        "id": "XjcvkYEv2mdS"
       },
       "execution_count": null,
       "outputs": []
